--- a/styles/board.css
+++ b/styles/board.css
@@ -16,7 +16,7 @@ body {
 }
 
 .board-header {
-    padding: 80px 40px 0 0px;
+    padding: 40px 40px 0 0px;
     max-width: 1208px;
     position: fixed;
     top: 96px;
@@ -32,11 +32,11 @@ body {
     align-items: center;
     justify-content: space-between;
     gap: 24px;
-    height: 73px;
+    height: fit-content;
 }
 
 .board-title {
-    font-size: 61px;
+    font-size: clamp(47px, 4vw, 61px);
     font-weight: 700;
 }
 
@@ -896,7 +896,7 @@ body {
     }
 
     .board-header {
-        padding: 48px 16px 92px;
+        padding: 32px 16px 92px 0;
     }
 
     .board-header {
